# cc-clipboard

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: capture.rs  main.rs
