[package]
name = "cc-clipboard"
version = "0.1.0"
edition = "2021"

[dependencies]
tray-icon = "0.21"
global-hotkey = "0.7"
winit = "0.30"
softbuffer = "0.4"
xcap = "0.2"
arboard = "3"
win-toast-notify = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", features = ["clock"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
